--- a/www/package.json
+++ b/www/package.json
@@ -25,6 +25,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "postcss-import": "^15.1.0",
+    "sass": "^1.69.5",
     "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5"
