--- a/www/package.json
+++ b/www/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@codecentrum/piksel-hooks": "workspace:*",
+    "@codecentrum/piksel-ui": "workspace:*",
     "contentlayer": "^0.3.4",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
