--- a/www/package.json
+++ b/www/package.json
@@ -12,11 +12,13 @@
     "@codecentrum/piksel-hooks": "workspace:*",
     "@codecentrum/piksel-ui": "workspace:*",
     "contentlayer": "^0.3.4",
+    "github-slugger": "^2.0.0",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-slug": "^6.0.0"
   },
   "devDependencies": {
     "@code-hike/mdx": "^0.9.0",
