chore(docs): added docs button, and several hooks

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -27,6 +27,7 @@
     "bun-types": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "react": "^18"
   }
 }
