--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,7 +30,8 @@
     "sass": "^1.69.5"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "react": "^18"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
