--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@types/node": "^20.11.7",
     "@types/web": "^0.0.135",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "babel-loader": "^9.1.3",
+    "babel-preset-react-app": "^10.0.1",
     "commitizen": "^4.3.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
@@ -22,10 +26,18 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.6",
+    "identity-obj-proxy": "^3.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "rimraf": "^5.0.5",
+    "rollup": "^4.9.6",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.0.0"
   },
   "config": {
