--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@codecentrum/piksel-hooks",
   "version": "0.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "description": "A collection of hooks for state and UI management",
   "private": true,
   "files": [
     "dist"
   ],
   "keywords": [
-    "bun"
+    "design-system"
   ],
   "license": "MIT",
   "homepage": "https://github.com/codecentrum/piksel#readme",
@@ -19,13 +20,8 @@
   },
   "bugs": "https://github.com/codecentrum/piksel/issues",
   "scripts": {
-    "watch": "bun --watch run ./build.ts",
-    "build": "bun run ./build.ts"
-  },
-  "devDependencies": {
-    "@types/web": "^0.0.135",
-    "bun-plugin-dts": "^0.2.1",
-    "bun-types": "latest"
+    "dev": "rollup -c -w",
+    "build": "rimraf ./dist && rollup -c"
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
