--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@codecentrum/piksel-ui",
   "version": "0.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "description": "A collection of UI component",
   "private": true,
   "files": [
     "dist"
   ],
   "keywords": [
-    "bun"
+    "design-system"
   ],
   "license": "MIT",
   "homepage": "https://github.com/codecentrum/piksel#readme",
@@ -19,20 +20,16 @@
   },
   "bugs": "https://github.com/codecentrum/piksel/issues",
   "scripts": {
-    "watch": "bun --watch run ./build.ts",
-    "build": "bun run ./build.ts"
+    "dev": "rollup -c -w",
+    "build": "rimraf ./dist && rollup -c"
   },
   "devDependencies": {
-    "@types/css-modules": "^1.0.5",
-    "@types/web": "^0.0.135",
-    "bun-lightningcss": "^0.2.0",
-    "bun-plugin-dts": "^0.2.1",
-    "bun-types": "latest",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.70.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0",
-    "react": "^18"
+    "react": "^18",
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
