--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "contentlayer": "^0.3.4",
     "github-slugger": "^2.0.0",
+    "@codecentrum/piksel-hooks": "*",
+    "@codecentrum/piksel-ui": "*",
     "next": "14.1.0",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
