--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@codecentrum/piksel-ui",
   "version": "0.0.0",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "description": "A collection of UI component",
   "private": true,
@@ -23,10 +23,6 @@
     "dev": "rollup -c -w",
     "build": "rimraf ./dist && rollup -c"
   },
-  "devDependencies": {
-    "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.70.0"
-  },
   "peerDependencies": {
     "react": "^18",
     "typescript": "^5.0.0"
@@ -34,6 +30,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.1"
   }
 }
