--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,8 +28,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "class-variance-authority": "^0.7.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1"
   }
